<resources>
    <string name="app_name">TO9Deals</string>
    <string name="submit">Submit</string>
    <string name="enter_your_serial_number">Enter Your Serial Number:</string>
    <string name="deals">DEALS</string>
    <string name="your_15_digit_phone_serial_number">Your 15 Digit Phone Serial Number</string>
    <string name="by_proceeding_you_agree_to_our_terms_of_service_click_here_to_view">By proceeding, you agree to our Terms Of Service. Click here to View.</string>
    <string name="to9">TO9</string>
    <string name="last_updated_13_05_2022">Last updated: 13/05/2022</string>
    <string name="team_of_9_app_privacy_policy">Team Of 9 App Privacy Policy</string>
    <string name="back">Back</string>
    <string name="your_privacy_is_our_priority_we_appreciate_that_you_entrust_us_with_your_personal_data_and_want_you_to_know_that_we_respect_your_privacy_our_privacy_practices_are_based_on_these_core_principles_we_design_our_platform_and_services_with_your_privacy_in_mind_we_strive_for_transparency_about_how_we_process_your_personal_data_we_work_hard_to_provide_clear_and_straightforward_descriptions_of_our_privacy_practices_because_we_want_you_to_understand_them_we_are_dedicated_to_the_protection_of_your_personal_data_we_continually_assess_data_security_risks_and_evaluate_and_monitor_our_security_practices_to_protect_against_them_this_privacy_policy_describes_how_team_of_9_group_7_and_affiliates_collect_and_process_your_personal_data_and_how_you_can_exercise_your_privacy_rights_team_of_9_is_incorporated_and_registered_in_england_when_we_refer_to_our_platform_we_mean_team_of_9s_app_our_business_partners_that_allow_access_to_team_of_9s_app_this_privacy_policy_applies_to_the_phone_holders_that_purchased_one_of_our_exclusive_phones_preloaded_with_an_account_members_and_to_others_who_browse_the_public_sections_of_our_platform_or_engage_with_team_of_9_on_social_media_when_you_use_our_platform_you_acknowledge_and_agree_that_this_privacy_policy_applies_to_the_processing_of_your_personal_data_if_you_are_in_the_eu_the_eu_specific_additions_to_the_privacy_policy_take_precedence_over_all_other_provisions_team_of_9s_app_works_with_brands_that_want_to_advertise_their_products_and_services_to_our_members_we_refer_to_these_brands_as_our_partners_through_the_platform_members_have_access_to_exclusive_promotions_discounts_and_other_exciting_offers_from_partners_offers_we_collect_information_from_or_about_members_so_that_we_can_curate_offers_and_for_the_purposes_described_in_this_privacy_policy_of_course_we_also_collect_information_when_we_are_required_to_do_so_by_applicable_laws_personal_data_that_you_provide_to_team_of_9s_app_preferences_opinions_and_other_details_about_yourself_that_you_choose_to_share_in_your_responses_to_surveys_or_during_focus_groups_or_discussions_and_the_country_you_currently_live_in_we_collect_these_personal_data_for_the_following_purposes_to_send_information_about_offers_that_we_think_will_interest_members_including_offers_that_are_personalised_based_on_the_information_associated_with_that_member_s_account_to_respond_to_correspondence_and_requests_such_as_member_interactions_with_our_customer_service_team_to_show_deals_and_discounts_based_on_the_country_you_are_situated_in_we_only_collect_and_process_your_personal_data_according_to_applicable_law_your_location_will_determine_the_legal_entity_that_is_responsible_for_the_collection_and_processing_of_your_personal_data_under_eu_data_protection_law_team_of_9_may_collect_and_process_your_personal_data_only_when_team_of_9_follows_the_lawful_bases_specified_in_eu_data_protection_law_and_informs_you_of_the_specific_lawful_bases_on_which_team_of_9_relies_the_lawful_bases_on_which_team_of_9_relies_are_consent_we_process_your_personal_data_when_you_provide_your_consent_performance_of_a_contract_team_of_9_operates_the_platform_and_related_services_on_the_basis_of_a_contract_with_you_which_is_our_terms_of_service_privacy_policy_compliance_with_a_legal_obligation_if_we_ask_you_to_provide_personal_data_to_comply_with_a_legal_obligation_or_to_perform_a_contract_with_you_we_may_not_be_able_to_comply_with_our_legal_obligation_or_enter_into_or_perform_the_contract_if_you_do_not_provide_that_personal_data_for_example_when_we_ask_you_to_provide_your_email_address_we_need_that_data_to_verify_that_you_are_eligible_to_use_the_platform_we_will_advise_you_whether_providing_your_personal_data_is_mandatory_and_the_possible_consequences_if_you_do_not_provide_your_personal_data_if_another_legal_basis_or_legitimate_interest_is_relevant_to_particular_personal_data_processing_we_will_make_that_clear_when_we_collect_that_personal_data_if_you_have_questions_or_need_further_information_concerning_the_legal_basis_on_which_we_process_your_personal_data_please_contact_the_lead_of_our_forensic_team_at_s5216480_bournemouth_ac_uk">Your privacy is our priority. We appreciate that you entrust us with your personal data and want you to know that we respect your privacy. Our privacy practices are based on these core principles: • We design our platform and services with your privacy in mind. • We strive for transparency about how we process your personal data. We work hard to provide clear and straightforward descriptions of our privacy practices because we want you to understand them. • We are dedicated to the protection of your personal data. We continually assess data security risks and evaluate and monitor our security practices to protect against them. This Privacy Policy describes how Team Of 9, (Group 7) and affiliates, collect and process your personal data and how you can exercise your privacy rights. Team of 9 is incorporated and registered in England. When we refer to our “Platform”, we mean Team of 9s App, our business partners that allow access to Team Of 9s App. This Privacy Policy applies to the Phone holders that purchased one of our exclusive phones preloaded with an account (“Members”) and to others who browse the public sections of our Platform or engage with Team Of 9 on social media. WHEN YOU USE OUR PLATFORM, YOU ACKNOWLEDGE AND AGREE THAT THIS PRIVACY POLICY APPLIES TO THE PROCESSING OF YOUR PERSONAL DATA. If you are in the EU, the EU-specific additions to the Privacy Policy take precedence over all other provisions. Team Of 9s App works with brands that want to advertise their products and services to our members. We refer to these brands as our “Partners.” Through the Platform, Members have access to exclusive promotions, discounts, and other exciting offers from Partners (“Offers”). We collect information from or about Members so that we can curate Offers and for the purposes described in this Privacy Policy. Of course, we also collect information when we are required to do so by applicable laws. Personal Data That You Provide To Team Of 9s App: • Preferences, opinions, and other details about yourself that you choose to share in your responses to surveys or during focus groups or discussions; and • The country you currently live in. We collect these personal data for the following purposes: • To send information about Offers that we think will interest Members, including Offers that are personalised based on the information associated with that Member’s account. • To respond to correspondence and requests, such as Member interactions with our Customer Service team. • To show deals and discounts based on the country you are situated in. We only collect and process your personal data according to applicable law. Your location will determine the legal entity that is responsible for the collection and processing of your personal data. Under EU data protection law, Team Of 9 may collect and process your personal data only when Team Of 9 follows the lawful bases specified in EU data protection law and informs you of the specific lawful bases on which Team Of 9 relies. The lawful bases on which Team Of 9 relies are: • Consent: we process your personal data when you provide your consent. • Performance of a contract: Team Of 9 operates the Platform and related services on the basis of a contract with you, which is our Terms of service/Privacy policy. • Compliance with a legal obligation. If we ask you to provide personal data to comply with a legal obligation or to perform a contract with you, we may not be able to comply with our legal obligation or enter into or perform the contract if you do not provide that personal data. For example, when we ask you to provide your email address, we need that data to verify that you are eligible to use the Platform. We will advise you whether providing your personal data is mandatory and the possible consequences if you do not provide your personal data. If another legal basis or legitimate interest is relevant to particular personal data processing, we will make that clear when we collect that personal data. If you have questions or need further information concerning the legal basis on which we process your personal data, please contact the lead of our forensic team at s5216480@bournemouth.ac.uk.</string>
    <string name="our_featured_brands">Our Featured Brands</string>
    <string name="featured_brand_1">Featured Brand 1</string>
    <string name="featured_brand_2">Featured Brand 2</string>
    <string name="view_other_brands">View Other Brands</string>
    <string name="featured_brand_3">Featured Brand 3</string>
    <string name="image_of_brand">Image Of Brand</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="brand_image">Brand Image</string>
    <string name="reveal_code">Reveal Code</string>
    <string name="our_deals">Our Deals</string>
    <string name="scroll_wheel_of_various_types_of_deals_available">Scroll Wheel of various types of deals available</string>
    <string name="option_to_view_fitness_deals">Option to view fitness deals</string>
    <string name="option_to_view_hospitality_deals">Option to view hospitality deals</string>
    <string name="option_to_view_technology_deals">Option to view technology deals</string>
    <string name="option_to_view_shopping_deals">Option to view shopping deals</string>
    <string name="fitness_deals">Fitness Deals</string>
    <string name="hospitality_deals">Hospitality Deals</string>
    <string name="shopping_deals">Shopping Deals</string>
    <string name="technology_deals">Technology Deals</string>
</resources>