<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndividualDealActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="171dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/brand_image"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IndividualDealBack"
        app:srcCompat="@drawable/clipart2576710" />

    <Button
        android:id="@+id/IndividualDealBack"
        android:layout_width="142dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BrandName"
        android:layout_width="283dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:text="@string/featured_brand_1"
        android:textAlignment="center"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/brandDesc"
        android:layout_width="298dp"
        android:layout_height="205dp"
        android:layout_marginTop="20dp"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur"
        android:textAlignment="center"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BrandName" />

    <Button
        android:id="@+id/revealCodeButton"
        android:layout_width="278dp"
        android:layout_height="55dp"
        android:text="@string/reveal_code"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>