<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeaturedPageActivity">

    <TextView
        android:id="@+id/featuredTitle"
        android:layout_width="272dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:text="@string/our_featured_brands"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewMoreButton"
        android:layout_width="266dp"
        android:layout_height="66dp"
        android:layout_marginBottom="32dp"
        android:text="@string/view_other_brands"
        app:layout_constraintBottom_toTopOf="@+id/privacyPolicy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:layout_marginBottom="36dp"
        android:text="@string/privacy_policy"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/FeaturedConstraintLayout"
        android:layout_width="303dp"
        android:layout_height="433dp"
        app:layout_constraintBottom_toTopOf="@+id/viewMoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/featuredTitle">

        <ImageView
            android:id="@+id/featuredOne"
            android:layout_width="303dp"
            android:layout_height="112dp"
            android:background="@color/teal_700"
            android:contentDescription="@string/brand_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/featuredOneText"
            android:layout_width="191dp"
            android:layout_height="40dp"
            android:text="@string/featured_brand_1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/featuredOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/featuredOne"
            app:layout_constraintTop_toTopOf="@+id/featuredOne" />

        <ImageView
            android:id="@+id/featuredTwo"
            android:layout_width="303dp"
            android:layout_height="112dp"
            android:background="@color/purple_500"
            android:contentDescription="@string/brand_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/featuredThree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featuredOne"
            app:layout_constraintVertical_bias="0.494" />

        <TextView
            android:id="@+id/featuredTwoText"
            android:layout_width="191dp"
            android:layout_height="40dp"
            android:text="@string/featured_brand_2"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/featuredTwo"
            app:layout_constraintEnd_toEndOf="@+id/featuredTwo"
            app:layout_constraintStart_toStartOf="@+id/featuredTwo"
            app:layout_constraintTop_toTopOf="@+id/featuredTwo" />

        <ImageView
            android:id="@+id/featuredThree"
            android:layout_width="303dp"
            android:layout_height="112dp"
            android:background="#294783"
            android:contentDescription="@string/brand_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/featuredThreeText"
            android:layout_width="191dp"
            android:layout_height="40dp"
            android:text="@string/featured_brand_3"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/featuredThree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/featuredThree"
            app:layout_constraintTop_toTopOf="@+id/featuredThree" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>