<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TandCActivity">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="297dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:text="@string/team_of_9_app_privacy_policy"
        android:textAlignment="center"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/last_updated_13_05_2022"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <ScrollView
        android:layout_width="380dp"
        android:layout_height="570dp"
        android:layout_marginStart="12dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUpdated"
        app:layout_constraintVertical_bias="0.324">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="1320dp"
                android:layout_marginTop="44dp"
                android:text="@string/your_privacy_is_our_priority_we_appreciate_that_you_entrust_us_with_your_personal_data_and_want_you_to_know_that_we_respect_your_privacy_our_privacy_practices_are_based_on_these_core_principles_we_design_our_platform_and_services_with_your_privacy_in_mind_we_strive_for_transparency_about_how_we_process_your_personal_data_we_work_hard_to_provide_clear_and_straightforward_descriptions_of_our_privacy_practices_because_we_want_you_to_understand_them_we_are_dedicated_to_the_protection_of_your_personal_data_we_continually_assess_data_security_risks_and_evaluate_and_monitor_our_security_practices_to_protect_against_them_this_privacy_policy_describes_how_team_of_9_group_7_and_affiliates_collect_and_process_your_personal_data_and_how_you_can_exercise_your_privacy_rights_team_of_9_is_incorporated_and_registered_in_england_when_we_refer_to_our_platform_we_mean_team_of_9s_app_our_business_partners_that_allow_access_to_team_of_9s_app_this_privacy_policy_applies_to_the_phone_holders_that_purchased_one_of_our_exclusive_phones_preloaded_with_an_account_members_and_to_others_who_browse_the_public_sections_of_our_platform_or_engage_with_team_of_9_on_social_media_when_you_use_our_platform_you_acknowledge_and_agree_that_this_privacy_policy_applies_to_the_processing_of_your_personal_data_if_you_are_in_the_eu_the_eu_specific_additions_to_the_privacy_policy_take_precedence_over_all_other_provisions_team_of_9s_app_works_with_brands_that_want_to_advertise_their_products_and_services_to_our_members_we_refer_to_these_brands_as_our_partners_through_the_platform_members_have_access_to_exclusive_promotions_discounts_and_other_exciting_offers_from_partners_offers_we_collect_information_from_or_about_members_so_that_we_can_curate_offers_and_for_the_purposes_described_in_this_privacy_policy_of_course_we_also_collect_information_when_we_are_required_to_do_so_by_applicable_laws_personal_data_that_you_provide_to_team_of_9s_app_preferences_opinions_and_other_details_about_yourself_that_you_choose_to_share_in_your_responses_to_surveys_or_during_focus_groups_or_discussions_and_the_country_you_currently_live_in_we_collect_these_personal_data_for_the_following_purposes_to_send_information_about_offers_that_we_think_will_interest_members_including_offers_that_are_personalised_based_on_the_information_associated_with_that_member_s_account_to_respond_to_correspondence_and_requests_such_as_member_interactions_with_our_customer_service_team_to_show_deals_and_discounts_based_on_the_country_you_are_situated_in_we_only_collect_and_process_your_personal_data_according_to_applicable_law_your_location_will_determine_the_legal_entity_that_is_responsible_for_the_collection_and_processing_of_your_personal_data_under_eu_data_protection_law_team_of_9_may_collect_and_process_your_personal_data_only_when_team_of_9_follows_the_lawful_bases_specified_in_eu_data_protection_law_and_informs_you_of_the_specific_lawful_bases_on_which_team_of_9_relies_the_lawful_bases_on_which_team_of_9_relies_are_consent_we_process_your_personal_data_when_you_provide_your_consent_performance_of_a_contract_team_of_9_operates_the_platform_and_related_services_on_the_basis_of_a_contract_with_you_which_is_our_terms_of_service_privacy_policy_compliance_with_a_legal_obligation_if_we_ask_you_to_provide_personal_data_to_comply_with_a_legal_obligation_or_to_perform_a_contract_with_you_we_may_not_be_able_to_comply_with_our_legal_obligation_or_enter_into_or_perform_the_contract_if_you_do_not_provide_that_personal_data_for_example_when_we_ask_you_to_provide_your_email_address_we_need_that_data_to_verify_that_you_are_eligible_to_use_the_platform_we_will_advise_you_whether_providing_your_personal_data_is_mandatory_and_the_possible_consequences_if_you_do_not_provide_your_personal_data_if_another_legal_basis_or_legitimate_interest_is_relevant_to_particular_personal_data_processing_we_will_make_that_clear_when_we_collect_that_personal_data_if_you_have_questions_or_need_further_information_concerning_the_legal_basis_on_which_we_process_your_personal_data_please_contact_the_lead_of_our_forensic_team_at_s5216480_bournemouth_ac_uk" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>